--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1210,10 +1210,350 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def parse15(data):\n",
+    "  sensors, beacons = [], []\n",
+    "  for line in data:\n",
+    "    match = re.match('Sensor at x=(-?\\d+), y=(-?\\d+): closest beacon is at x=(-?\\d+), y=(-?\\d+)', line)\n",
+    "    sensors.append((int(match[1]), int(match[2])))\n",
+    "    beacons.append((int(match[3]), int(match[4])))\n",
+    "  return np.vstack(sensors), np.vstack(beacons)\n",
+    "\n",
+    "data15 = parse15(data(15))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def day15(sensors, beacons, target=2000000):\n",
+    "  tree = intervaltree.IntervalTree()\n",
+    "  for sensor, beacon in zip(sensors, beacons):\n",
+    "    distance = abs(sensor[0]-beacon[0]) + abs(sensor[1] - beacon[1])\n",
+    "    for i in range(distance+1):\n",
+    "      if sensor[1] + i == target or sensor[1] - i == target:\n",
+    "        tree.addi(sensor[0] - distance + i, sensor[0] + distance - i + 1)\n",
+    "  return tree\n",
+    "\n",
+    "sensor_ranges = day15(*data15, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "IntervalTree([Interval(-2, 25)])"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sensor_ranges.merge_overlaps()\n",
+    "sensor_ranges"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sensor_ranges[10].merge_overlaps()\n",
+    "sensor_ranges[10].end() - sensor_ranges[10].begin() - 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import intervaltree\n",
+    "t = intervaltree.IntervalTree()\n",
+    "t[10:11] = 2\n",
+    "t[4:6] = 1\n",
+    "t[0:5] = 1\n",
+    "t.merge_overlaps()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "IntervalTree([Interval(0, 6), Interval(10, 11, 2)])"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tau = 2*np.pi\n",
+    "\n",
+    "rotation = np.array([[np.cos(tau/8), -np.sin(tau/8)],[np.sin(tau/8), np.cos(tau/8)]])\n",
+    "undo = np.array([[np.cos(-tau/8), -np.sin(-tau/8)],[np.sin(-tau/8), np.cos(-tau/8)]])\n",
+    "\n",
+    "sensors, beacons = (rotation @ data15[0]).transpose(), (rotation @ data15[1]).transpose()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[-11.3137085 ,  14.14213562],\n",
+       "        [ -4.94974747,  17.67766953],\n",
+       "        [  7.77817459,  10.60660172],\n",
+       "        [ -1.41421356,  18.38477631],\n",
+       "        [ -7.07106781,  21.21320344],\n",
+       "        [ -2.12132034,  21.92031022],\n",
+       "        [  0.70710678,  10.60660172],\n",
+       "        [  1.41421356,   1.41421356],\n",
+       "        [ -7.77817459,   7.77817459],\n",
+       "        [  4.24264069,  24.04163056],\n",
+       "        [ -2.12132034,  26.1629509 ],\n",
+       "        [  6.36396103,  16.26345597],\n",
+       "        [  7.77817459,  12.02081528],\n",
+       "        [ 13.43502884,  14.8492424 ]]),\n",
+       " array([[-12.02081528,   9.19238816],\n",
+       "        [ -4.24264069,  18.38477631],\n",
+       "        [  8.48528137,  12.72792206],\n",
+       "        [ -4.24264069,  18.38477631],\n",
+       "        [ -4.24264069,  18.38477631],\n",
+       "        [ -4.24264069,  18.38477631],\n",
+       "        [ -5.65685425,   8.48528137],\n",
+       "        [ -5.65685425,   8.48528137],\n",
+       "        [ -5.65685425,   8.48528137],\n",
+       "        [  5.65685425,  29.69848481],\n",
+       "        [ -0.70710678,  30.40559159],\n",
+       "        [  8.48528137,  12.72792206],\n",
+       "        [  8.48528137,  12.72792206],\n",
+       "        [  8.48528137,  12.72792206]]))"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sensors, beacons"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pairwise(iterable):\n",
+    "    # https://docs.python.org/dev/library/itertools.html#recipes\n",
+    "    a, b = itertools.tee(iterable)\n",
+    "    next(b, None)\n",
+    "    return zip(a, b)\n",
+    "    \n",
+    "# https://stackoverflow.com/questions/25068538/intersection-and-difference-of-two-rectangles\n",
+    "class Rectangle:\n",
+    "    def __init__(self, x1, y1, x2, y2):\n",
+    "      self.x1 = min(x1, x2)\n",
+    "      self.x2 = max(x1, x2)\n",
+    "      self.y1 = min(y1, y2)\n",
+    "      self.y2 = max(y1, y2)\n",
+    "\n",
+    "    def intersection(self, other):\n",
+    "        a, b = self, other\n",
+    "        x1 = max(min(a.x1, a.x2), min(b.x1, b.x2))\n",
+    "        y1 = max(min(a.y1, a.y2), min(b.y1, b.y2))\n",
+    "        x2 = min(max(a.x1, a.x2), max(b.x1, b.x2))\n",
+    "        y2 = min(max(a.y1, a.y2), max(b.y1, b.y2))\n",
+    "        if x1<x2 and y1<y2:\n",
+    "            return type(self)(x1, y1, x2, y2)\n",
+    "    __and__ = intersection\n",
+    "\n",
+    "    def difference(self, other):\n",
+    "        inter = self&other\n",
+    "        if not inter:\n",
+    "            yield self\n",
+    "            return\n",
+    "        xs = {self.x1, self.x2}\n",
+    "        ys = {self.y1, self.y2}\n",
+    "        if self.x1<other.x1<self.x2: xs.add(other.x1)\n",
+    "        if self.x1<other.x2<self.x2: xs.add(other.x2)\n",
+    "        if self.y1<other.y1<self.y2: ys.add(other.y1)\n",
+    "        if self.y1<other.y2<self.y2: ys.add(other.y2)\n",
+    "        for (x1, x2), (y1, y2) in itertools.product(\n",
+    "            pairwise(sorted(xs)), pairwise(sorted(ys))\n",
+    "        ):\n",
+    "            rect = type(self)(x1, y1, x2, y2)\n",
+    "            if rect!=inter:\n",
+    "                yield rect\n",
+    "    __sub__ = difference\n",
+    "\n",
+    "    def __init__(self, x1, y1, x2, y2):\n",
+    "        if x1>x2 or y1>y2:\n",
+    "            raise ValueError(\"Coordinates are invalid\")\n",
+    "        self.x1, self.y1, self.x2, self.y2 = x1, y1, x2, y2\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        yield self.x1\n",
+    "        yield self.y1\n",
+    "        yield self.x2\n",
+    "        yield self.y2\n",
+    "\n",
+    "    def area(self):\n",
+    "      return (self.y2 - self.y1) * (self.x2 - self.x1)\n",
+    "\n",
+    "    def __eq__(self, other):\n",
+    "        return isinstance(other, Rectangle) and tuple(self)==tuple(other)\n",
+    "    def __ne__(self, other):\n",
+    "        return not (self==other)\n",
+    "    def __repr__(self):\n",
+    "        return type(self).__name__+repr(tuple(self))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "91.94112549695426"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rectangles = []\n",
+    "for i, sensor in enumerate(sensors):\n",
+    "  beacon = tuple(beacons[i])\n",
+    "  mirror = (2*sensor[0] - beacon[0], 2*sensor[1] - beacon[1])\n",
+    "  rectangles.append(Rectangle(\n",
+    "    min(mirror[0], beacon[0])-1, \n",
+    "    min(mirror[1], beacon[1])-1, \n",
+    "    max(mirror[0], beacon[0])+1, \n",
+    "    max(mirror[1], beacon[1])+1\n",
+    "  ))\n",
+    "rectangles[6].area()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "intersections = 0\n",
+    "for i in range(len(rectangles)):\n",
+    "  for j in range(i+1, len(rectangles)):\n",
+    "    if double := rectangles[i].intersection(rectangles[j]):\n",
+    "      intersections += double.area()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "474.00000000000006"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum([rectangle.area() for rectangle in rectangles])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "53.999999999999986"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rectangles[6].area()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Rectangle(-5.65685424949238, 8.485281374238571, 7.071067811865476, 12.727922061357855)"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rectangles[6]"
+   ]
   }
  ],
  "metadata": {
