--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -1210,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1227,46 +1227,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def day15(sensors, beacons, target=2000000):\n",
+    "def scan_depth(sensors, beacons, target=2000000):\n",
     "  tree = intervaltree.IntervalTree()\n",
     "  for sensor, beacon in zip(sensors, beacons):\n",
     "    distance = abs(sensor[0]-beacon[0]) + abs(sensor[1] - beacon[1])\n",
-    "    for i in range(distance+1):\n",
-    "      if sensor[1] + i == target or sensor[1] - i == target:\n",
-    "        tree.addi(sensor[0] - distance + i, sensor[0] + distance - i + 1)\n",
-    "  return tree\n",
-    "\n",
-    "sensor_ranges = day15(*data15, 10)"
+    "    if (remaining := distance - abs(target - sensor[1])) > 0:\n",
+    "      tree.addi(sensor[0] - remaining, sensor[0] + remaining + 1.01)\n",
+    "  tree.merge_overlaps()\n",
+    "  return tree"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "IntervalTree([Interval(-2, 25)])"
-      ]
-     },
-     "execution_count": 157,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sensor_ranges.merge_overlaps()\n",
-    "sensor_ranges"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -1275,109 +1252,116 @@
        "26"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sensor_ranges[10].merge_overlaps()\n",
-    "sensor_ranges[10].end() - sensor_ranges[10].begin() - 1"
+    "def day15_1(data):\n",
+    "  tree = scan_depth(*data)\n",
+    "  return int(tree.end() - tree.begin()) - 1\n",
+    "\n",
+    "day15_1(data15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 228,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 IntervalTree([Interval(-8, 27.01)])\n",
+      "1 IntervalTree([Interval(-7, 28.01)])\n",
+      "2 IntervalTree([Interval(-6, 27.01)])\n",
+      "3 IntervalTree([Interval(-5, 26.01)])\n",
+      "4 IntervalTree([Interval(-4, 25.01)])\n",
+      "5 IntervalTree([Interval(-3, 24.01)])\n",
+      "6 IntervalTree([Interval(-2, 23.01)])\n",
+      "7 IntervalTree([Interval(-1, 22.01)])\n",
+      "8 IntervalTree([Interval(0, 23.01)])\n",
+      "9 IntervalTree([Interval(-1, 24.01)])\n",
+      "10 IntervalTree([Interval(-2, 25.01)])\n",
+      "11 IntervalTree([Interval(-3, 14.01), Interval(15, 26.01)])\n",
+      "12 IntervalTree([Interval(-2, 27.01)])\n",
+      "13 IntervalTree([Interval(-1, 28.01)])\n",
+      "14 IntervalTree([Interval(-1, 29.01)])\n",
+      "15 IntervalTree([Interval(-2, 28.01)])\n",
+      "16 IntervalTree([Interval(-3, 27.01)])\n",
+      "17 IntervalTree([Interval(-4, 26.01)])\n",
+      "18 IntervalTree([Interval(-5, 25.01)])\n",
+      "19 IntervalTree([Interval(-4, 24.01)])\n",
+      "20 IntervalTree([Interval(-3, 24.01)])\n"
+     ]
+    }
+   ],
    "source": [
-    "import intervaltree\n",
-    "t = intervaltree.IntervalTree()\n",
-    "t[10:11] = 2\n",
-    "t[4:6] = 1\n",
-    "t[0:5] = 1\n",
-    "t.merge_overlaps()"
+    "for i in range(21):\n",
+    "  print(i, scan_depth(*data15, i))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3398893 IntervalTree([Interval(-1628590, 2889605.01), Interval(2889606, 4238367.01)])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(3000000, 4000001):\n",
+    "  result = scan_depth(*data15, i)\n",
+    "  if len(result) > 1:\n",
+    "    print(i, result)\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "IntervalTree([Interval(0, 6), Interval(10, 11, 2)])"
+       "IntervalTree([Interval(-1628590, 2889605.01), Interval(2889606, 4238367.01)])"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 254,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "t"
+    "result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tau = 2*np.pi\n",
-    "\n",
-    "rotation = np.array([[np.cos(tau/8), -np.sin(tau/8)],[np.sin(tau/8), np.cos(tau/8)]])\n",
-    "undo = np.array([[np.cos(-tau/8), -np.sin(-tau/8)],[np.sin(-tau/8), np.cos(-tau/8)]])\n",
-    "\n",
-    "sensors, beacons = (rotation @ data15[0]).transpose(), (rotation @ data15[1]).transpose()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([[-11.3137085 ,  14.14213562],\n",
-       "        [ -4.94974747,  17.67766953],\n",
-       "        [  7.77817459,  10.60660172],\n",
-       "        [ -1.41421356,  18.38477631],\n",
-       "        [ -7.07106781,  21.21320344],\n",
-       "        [ -2.12132034,  21.92031022],\n",
-       "        [  0.70710678,  10.60660172],\n",
-       "        [  1.41421356,   1.41421356],\n",
-       "        [ -7.77817459,   7.77817459],\n",
-       "        [  4.24264069,  24.04163056],\n",
-       "        [ -2.12132034,  26.1629509 ],\n",
-       "        [  6.36396103,  16.26345597],\n",
-       "        [  7.77817459,  12.02081528],\n",
-       "        [ 13.43502884,  14.8492424 ]]),\n",
-       " array([[-12.02081528,   9.19238816],\n",
-       "        [ -4.24264069,  18.38477631],\n",
-       "        [  8.48528137,  12.72792206],\n",
-       "        [ -4.24264069,  18.38477631],\n",
-       "        [ -4.24264069,  18.38477631],\n",
-       "        [ -4.24264069,  18.38477631],\n",
-       "        [ -5.65685425,   8.48528137],\n",
-       "        [ -5.65685425,   8.48528137],\n",
-       "        [ -5.65685425,   8.48528137],\n",
-       "        [  5.65685425,  29.69848481],\n",
-       "        [ -0.70710678,  30.40559159],\n",
-       "        [  8.48528137,  12.72792206],\n",
-       "        [  8.48528137,  12.72792206],\n",
-       "        [  8.48528137,  12.72792206]]))"
+       "11558423398893"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 255,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sensors, beacons"
+    "2889605 * 4000000 + i"
    ]
   },
   {
