--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Imports\n",
     "from collections import defaultdict, Counter, deque\n",
     "from functools import lru_cache, reduce, cmp_to_key\n",
+    "from intervaltree import IntervalTree\n",
     "import itertools\n",
     "import json\n",
     "import numpy as np\n",
@@ -1210,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1220,21 +1221,14 @@
     "    match = re.match('Sensor at x=(-?\\d+), y=(-?\\d+): closest beacon is at x=(-?\\d+), y=(-?\\d+)', line)\n",
     "    sensors.append((int(match[1]), int(match[2])))\n",
     "    beacons.append((int(match[3]), int(match[4])))\n",
-    "  return np.vstack(sensors), np.vstack(beacons)\n",
+    "  return sensors, beacons\n",
     "\n",
-    "data15 = parse15(data(15))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 215,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "data15 = parse15(data(15))\n",
+    "\n",
     "def scan_depth(sensors, beacons, target=2000000):\n",
-    "  tree = intervaltree.IntervalTree()\n",
+    "  tree = IntervalTree()\n",
     "  for sensor, beacon in zip(sensors, beacons):\n",
-    "    distance = abs(sensor[0]-beacon[0]) + abs(sensor[1] - beacon[1])\n",
+    "    distance = int(abs(sensor[0]-beacon[0]) + abs(sensor[1] - beacon[1]))\n",
     "    if (remaining := distance - abs(target - sensor[1])) > 0:\n",
     "      tree.addi(sensor[0] - remaining, sensor[0] + remaining + 1.01)\n",
     "  tree.merge_overlaps()\n",
@@ -1243,105 +1237,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "26"
+       "5564017"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 307,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def day15_1(data):\n",
-    "  tree = scan_depth(*data)\n",
+    "def day15_1(data, target=2000000):\n",
+    "  tree = scan_depth(*data, target)\n",
     "  return int(tree.end() - tree.begin()) - 1\n",
     "\n",
     "day15_1(data15)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 228,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 IntervalTree([Interval(-8, 27.01)])\n",
-      "1 IntervalTree([Interval(-7, 28.01)])\n",
-      "2 IntervalTree([Interval(-6, 27.01)])\n",
-      "3 IntervalTree([Interval(-5, 26.01)])\n",
-      "4 IntervalTree([Interval(-4, 25.01)])\n",
-      "5 IntervalTree([Interval(-3, 24.01)])\n",
-      "6 IntervalTree([Interval(-2, 23.01)])\n",
-      "7 IntervalTree([Interval(-1, 22.01)])\n",
-      "8 IntervalTree([Interval(0, 23.01)])\n",
-      "9 IntervalTree([Interval(-1, 24.01)])\n",
-      "10 IntervalTree([Interval(-2, 25.01)])\n",
-      "11 IntervalTree([Interval(-3, 14.01), Interval(15, 26.01)])\n",
-      "12 IntervalTree([Interval(-2, 27.01)])\n",
-      "13 IntervalTree([Interval(-1, 28.01)])\n",
-      "14 IntervalTree([Interval(-1, 29.01)])\n",
-      "15 IntervalTree([Interval(-2, 28.01)])\n",
-      "16 IntervalTree([Interval(-3, 27.01)])\n",
-      "17 IntervalTree([Interval(-4, 26.01)])\n",
-      "18 IntervalTree([Interval(-5, 25.01)])\n",
-      "19 IntervalTree([Interval(-4, 24.01)])\n",
-      "20 IntervalTree([Interval(-3, 24.01)])\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(21):\n",
-    "  print(i, scan_depth(*data15, i))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 237,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3398893 IntervalTree([Interval(-1628590, 2889605.01), Interval(2889606, 4238367.01)])\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(3000000, 4000001):\n",
-    "  result = scan_depth(*data15, i)\n",
-    "  if len(result) > 1:\n",
-    "    print(i, result)\n",
-    "    break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 254,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "IntervalTree([Interval(-1628590, 2889605.01), Interval(2889606, 4238367.01)])"
-      ]
-     },
-     "execution_count": 254,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "result"
    ]
   },
   {
@@ -1361,183 +1276,32 @@
     }
    ],
    "source": [
-    "2889605 * 4000000 + i"
+    "def day15_2(data, target=4000000):\n",
+    "  tree = IntervalTree()\n",
+    "  tree.addi(-target, target+1)\n",
+    "\n",
+    "  for i in range(target+1):\n",
+    "    result = scan_depth(*data, i)\n",
+    "    if len(result) > 1:\n",
+    "      return int(min([x.end for x in list(result)])) * 4000000 + i\n",
+    "\n",
+    "# Takes a couple minutes - should use 45 degree rotation instead\n",
+    "day15_2(data15)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Day 16"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def pairwise(iterable):\n",
-    "    # https://docs.python.org/dev/library/itertools.html#recipes\n",
-    "    a, b = itertools.tee(iterable)\n",
-    "    next(b, None)\n",
-    "    return zip(a, b)\n",
-    "    \n",
-    "# https://stackoverflow.com/questions/25068538/intersection-and-difference-of-two-rectangles\n",
-    "class Rectangle:\n",
-    "    def __init__(self, x1, y1, x2, y2):\n",
-    "      self.x1 = min(x1, x2)\n",
-    "      self.x2 = max(x1, x2)\n",
-    "      self.y1 = min(y1, y2)\n",
-    "      self.y2 = max(y1, y2)\n",
-    "\n",
-    "    def intersection(self, other):\n",
-    "        a, b = self, other\n",
-    "        x1 = max(min(a.x1, a.x2), min(b.x1, b.x2))\n",
-    "        y1 = max(min(a.y1, a.y2), min(b.y1, b.y2))\n",
-    "        x2 = min(max(a.x1, a.x2), max(b.x1, b.x2))\n",
-    "        y2 = min(max(a.y1, a.y2), max(b.y1, b.y2))\n",
-    "        if x1<x2 and y1<y2:\n",
-    "            return type(self)(x1, y1, x2, y2)\n",
-    "    __and__ = intersection\n",
-    "\n",
-    "    def difference(self, other):\n",
-    "        inter = self&other\n",
-    "        if not inter:\n",
-    "            yield self\n",
-    "            return\n",
-    "        xs = {self.x1, self.x2}\n",
-    "        ys = {self.y1, self.y2}\n",
-    "        if self.x1<other.x1<self.x2: xs.add(other.x1)\n",
-    "        if self.x1<other.x2<self.x2: xs.add(other.x2)\n",
-    "        if self.y1<other.y1<self.y2: ys.add(other.y1)\n",
-    "        if self.y1<other.y2<self.y2: ys.add(other.y2)\n",
-    "        for (x1, x2), (y1, y2) in itertools.product(\n",
-    "            pairwise(sorted(xs)), pairwise(sorted(ys))\n",
-    "        ):\n",
-    "            rect = type(self)(x1, y1, x2, y2)\n",
-    "            if rect!=inter:\n",
-    "                yield rect\n",
-    "    __sub__ = difference\n",
-    "\n",
-    "    def __init__(self, x1, y1, x2, y2):\n",
-    "        if x1>x2 or y1>y2:\n",
-    "            raise ValueError(\"Coordinates are invalid\")\n",
-    "        self.x1, self.y1, self.x2, self.y2 = x1, y1, x2, y2\n",
-    "\n",
-    "    def __iter__(self):\n",
-    "        yield self.x1\n",
-    "        yield self.y1\n",
-    "        yield self.x2\n",
-    "        yield self.y2\n",
-    "\n",
-    "    def area(self):\n",
-    "      return (self.y2 - self.y1) * (self.x2 - self.x1)\n",
-    "\n",
-    "    def __eq__(self, other):\n",
-    "        return isinstance(other, Rectangle) and tuple(self)==tuple(other)\n",
-    "    def __ne__(self, other):\n",
-    "        return not (self==other)\n",
-    "    def __repr__(self):\n",
-    "        return type(self).__name__+repr(tuple(self))\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "91.94112549695426"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rectangles = []\n",
-    "for i, sensor in enumerate(sensors):\n",
-    "  beacon = tuple(beacons[i])\n",
-    "  mirror = (2*sensor[0] - beacon[0], 2*sensor[1] - beacon[1])\n",
-    "  rectangles.append(Rectangle(\n",
-    "    min(mirror[0], beacon[0])-1, \n",
-    "    min(mirror[1], beacon[1])-1, \n",
-    "    max(mirror[0], beacon[0])+1, \n",
-    "    max(mirror[1], beacon[1])+1\n",
-    "  ))\n",
-    "rectangles[6].area()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "intersections = 0\n",
-    "for i in range(len(rectangles)):\n",
-    "  for j in range(i+1, len(rectangles)):\n",
-    "    if double := rectangles[i].intersection(rectangles[j]):\n",
-    "      intersections += double.area()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "474.00000000000006"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sum([rectangle.area() for rectangle in rectangles])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "53.999999999999986"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rectangles[6].area()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Rectangle(-5.65685424949238, 8.485281374238571, 7.071067811865476, 12.727922061357855)"
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rectangles[6]"
-   ]
+   "source": []
   }
  ],
  "metadata": {
