day 17_1 - time for lunch

--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1429,15 +1429,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data17 = [1 if x == '>' else -1 for x in data(17)[0]]"
+   ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "def tetris_generator():\n",
+    "  return itertools.cycle([\n",
+    "    lambda y: [(x, y) for x in range(3, 7)], # -\n",
+    "    lambda y: [(4, y), (4, y+2)] + [(x, y+1) for x in range(3, 6)], # cross\n",
+    "    lambda y: [(x, y) for x in range(3, 6)] + [(5, y+1), (5, y+2)], # L\n",
+    "    lambda y: [(3, y+i) for i in range(4)], # |\n",
+    "    lambda y: [(3, y), (4, y), (3, y+1), (4, y+1)] # square\n",
+    "  ])\n",
+    "\n",
+    "def move_jet(piece, jet, rocks):\n",
+    "  move = set([(x+jet, y) for x, y in piece])\n",
+    "  return piece if any([p in rocks or p[0] == 0 or p[0] == 8 for p in move]) else move\n",
+    "\n",
+    "def move_gravity(piece, rocks):\n",
+    "  move, height = set([(x, y-1) for x, y in piece]), 0\n",
+    "  if stopped := (any([p in rocks or p[1] == 0 for p in move])):\n",
+    "    for rock in piece:\n",
+    "      rocks.add(rock)\n",
+    "      height = max(height, rock[1])\n",
+    "  return piece if stopped else move, height"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "156632"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day17_1(jets, n=2022):\n",
+    "  rocks, generator, jets, height = set(), tetris_generator(), itertools.cycle(jets), 0\n",
+    "  for i in range(n):\n",
+    "    piece = next(generator)(height + 4)\n",
+    "    for jet in jets:\n",
+    "      piece = move_jet(piece, jet, rocks)\n",
+    "      piece, stopped = move_gravity(piece, rocks)\n",
+    "      if stopped:\n",
+    "        height = max(height, stopped)\n",
+    "        # print(piece, stopped)\n",
+    "        break\n",
+    "    if not i%100000:\n",
+    "      print(i, height)\n",
+    "  return height\n",
+    "\n",
+    "day17_1(data17, 100000)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30000000.0"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1000000000000/100000*3"
+   ]
   }
  ],
  "metadata": {
