--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1429,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1438,51 +1438,221 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3068"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def tetris_generator():\n",
-    "  return itertools.cycle([\n",
-    "    lambda y: [(x, y) for x in range(3, 7)], # -\n",
-    "    lambda y: [(4, y), (4, y+2)] + [(x, y+1) for x in range(3, 6)], # cross\n",
-    "    lambda y: [(x, y) for x in range(3, 6)] + [(5, y+1), (5, y+2)], # L\n",
-    "    lambda y: [(3, y+i) for i in range(4)], # |\n",
-    "    lambda y: [(3, y), (4, y), (3, y+1), (4, y+1)] # square\n",
-    "  ])\n",
+    "pieces = [\n",
+    "    (frozenset(range(4)),), # -\n",
+    "    (frozenset([1]), frozenset(range(3)), frozenset([1])), # cross\n",
+    "    (frozenset(range(3)), frozenset([2]), frozenset([2])), # L\n",
+    "    (frozenset([0]),)*4,\n",
+    "    (frozenset(range(2)), frozenset(range(2)))\n",
+    "]\n",
     "\n",
-    "def move_jet(piece, jet, rocks):\n",
-    "  move = set([(x+jet, y) for x, y in piece])\n",
-    "  return piece if any([p in rocks or p[0] == 0 or p[0] == 8 for p in move]) else move\n",
+    "class Piece:\n",
+    "  def __init__(self, x, y, base):\n",
+    "    self.x = x\n",
+    "    self.y = y\n",
+    "    self.base = base\n",
     "\n",
-    "def move_gravity(piece, rocks):\n",
-    "  move, height = set([(x, y-1) for x, y in piece]), 0\n",
-    "  if stopped := (any([p in rocks or p[1] == 0 for p in move])):\n",
-    "    for rock in piece:\n",
-    "      rocks.add(rock)\n",
-    "      height = max(height, rock[1])\n",
-    "  return piece if stopped else move, height"
+    "  def in_rocks(self, rocks):\n",
+    "    for i, v in enumerate(self.base):\n",
+    "      y = i + self.y\n",
+    "      row = frozenset([self.x + p for p in v])\n",
+    "      if (rocks[y] if y < len(rocks) else frozenset([0, 8])).intersection(row):\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
+    "  def add_to_rocks(self, rocks):\n",
+    "    new_rocks, start = list(rocks), 0\n",
+    "    for i, v in enumerate(self.base):\n",
+    "      y = i + self.y\n",
+    "      row = frozenset([self.x + p for p in v])\n",
+    "      if y < len(rocks):\n",
+    "        new_rocks[y] = rocks[y].union(row)\n",
+    "        start = y if new_rocks[y] == frozenset(range(9)) else start\n",
+    "      else:\n",
+    "        new_rocks.append(frozenset([0, 8]).union(row))\n",
+    "    return tuple(new_rocks)[start:], len(new_rocks) - len(rocks)\n",
+    "\n",
+    "  def move_jet(self, jet, rocks):\n",
+    "    self.x += jet\n",
+    "    if self.in_rocks(rocks):\n",
+    "      self.x -= jet\n",
+    "\n",
+    "  def move_gravity(self, rocks):\n",
+    "    self.y -= 1\n",
+    "    if self.in_rocks(rocks):\n",
+    "      self.y += 1\n",
+    "      return self.add_to_rocks(rocks)\n",
+    "    return rocks, -1\n",
+    "\n",
+    "  def move(self, jet, rocks):\n",
+    "    self.move_jet(jet, rocks)\n",
+    "    return self.move_gravity(rocks)\n",
+    "\n",
+    "  def __repr__(self):\n",
+    "    return f'({self.x}, {self.y}) {self.base}'\n",
+    "\n",
+    "def day17_1(jets, n=2022):\n",
+    "  rocks, j, height = (frozenset(range(9)),), 0, 0\n",
+    "\n",
+    "  @lru_cache\n",
+    "  def move_piece(pi, j, rocks):\n",
+    "    piece = Piece(3, len(rocks) + 3, pieces[pi])\n",
+    "    for i in range(piece.y):\n",
+    "      ji = (j + i)%len(jets)\n",
+    "      # print('hmm', piece, ji, jets[ji])\n",
+    "      rocks, diff = piece.move(jets[ji], rocks)\n",
+    "      if diff > -1:\n",
+    "        return rocks, diff, ji+1\n",
+    "\n",
+    "  for i in range(n):\n",
+    "    rocks, diffy, j = move_piece(i%len(pieces), j, rocks)\n",
+    "    height += diffy\n",
+    "    # print(height, rocks)\n",
+    "    # if not i%100000:\n",
+    "    #   print(i, height)\n",
+    "  return height\n",
+    "\n",
+    "day17_1(data17, 2022)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 1\n"
-     ]
-    },
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not frozenset([0, 8]).intersection(frozenset([1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
-       "156632"
+       "True"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "frozenset(range(8)) == frozenset([0, 1, 2, 3, 4, 5, 6, 7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3,)"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(1, 2, 3)[2:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(frozenset({0, 1, 2, 3}),),\n",
+       " (frozenset({1}), frozenset({0, 1, 2}), frozenset({1})),\n",
+       " (frozenset({0, 1, 2}), frozenset({2}), frozenset({2})),\n",
+       " (frozenset({0}), frozenset({0}), frozenset({0}), frozenset({0})),\n",
+       " (frozenset({0, 1}), frozenset({0, 1}))]"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pieces = [\n",
+    "    (frozenset(range(4)),), # -\n",
+    "    (frozenset([1]), frozenset(range(3)), frozenset([1])), # cross\n",
+    "    (frozenset(range(3)), frozenset([2]), frozenset([2])), # L\n",
+    "    (frozenset([0]),)*4,\n",
+    "    (frozenset(range(2)), frozenset(range(2)))\n",
+    "]\n",
+    "pieces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "frozenset({1, 2, 3})"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "frozenset().union(frozenset([1, 2, 3]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30000000.0"
+      ]
+     },
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1508,22 +1678,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "30000000.0"
+       "0"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "1000000000000/100000*3"
+    "(0, 0, 0, 0, 0, 0, 0)[6]"
    ]
   }
  ],
