--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -1454,30 +1454,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data17 = [1 if x == '>' else -1 for x in data(17)[0]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1566376811584"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "data17 = [1 if x == '>' else -1 for x in data(17)[0]]\n",
+    "\n",
     "pieces = [\n",
     "    (frozenset(range(4)),), # -\n",
     "    (frozenset([1]), frozenset(range(3)), frozenset([1])), # cross\n",
@@ -1529,59 +1511,75 @@
     "    return self.move_gravity(rocks)\n",
     "\n",
     "  def __repr__(self):\n",
-    "    return f'({self.x}, {self.y}) {self.base}'\n",
-    "\n",
-    "def day17_1(jets, n=2022):\n",
+    "    return f'({self.x}, {self.y}) {self.base}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3186, 1566376811584)"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day17(jets, n=2022):\n",
     "  rocks, j, height = (frozenset(range(9)),), 0, 0\n",
     "\n",
-    "  slow_cache = {}\n",
-    "  fast_cache = {}\n",
     "  def move_piece(pi, j, rocks):\n",
     "    piece = Piece(3, len(rocks)+3, pieces[pi])\n",
-    "\n",
-    "    surface_depth = len(piece.base)+1\n",
-    "    previous = rocks[-surface_depth:]\n",
-    "    for i in range(1, surface_depth):\n",
-    "      if cached := fast_cache.get((pi, j, rocks[-i:])):\n",
-    "        piece.x, piece.y = cached, len(rocks)+1-i\n",
-    "        rocks, diff = piece.add_to_rocks(rocks)\n",
-    "        return rocks, diff, (j+3+i)%len(jets)\n",
-    "\n",
     "    for i in range(0, piece.y):\n",
     "      ji = (j + i)%len(jets)\n",
     "      rocks, diff = piece.move(jets[ji], rocks)\n",
     "      if diff > -1:\n",
     "        break\n",
-    "\n",
-    "    if diff > 0 and len(fast_cache) < 1385:\n",
-    "      affected = surface_depth-diff\n",
-    "      fast_cache[(pi, j, previous[-affected:])] = piece.x\n",
-    "\n",
     "    return rocks, diff, (ji+1)%len(jets)\n",
     "\n",
+    "  cache = {}\n",
     "  for i in range(n):\n",
     "    args = i%len(pieces), j, rocks\n",
-    "    if slow_cache.get(args):\n",
-    "      cycle_start, cycle_height = slow_cache[args]\n",
+    "    if cache.get(args):\n",
+    "      cycle_start, cycle_height = cache[args]\n",
     "      period_length, period_depth = i - cycle_start, height-cycle_height\n",
     "      iterations = int((n-cycle_start)/period_length)\n",
     "      i = cycle_start + iterations * period_length\n",
     "      height = cycle_height + iterations * period_depth\n",
     "      break\n",
     "    rocks, diffy, j = move_piece(*args)\n",
-    "    slow_cache[args] = (i, height)\n",
+    "    cache[args] = (i, height)\n",
     "    height += diffy\n",
     "\n",
     "  for i in range(i, n):\n",
     "    rocks, diffy, j = move_piece(i%len(pieces), j, rocks)\n",
-    "    slow_cache[args] = i\n",
     "    height += diffy\n",
     "  return height\n",
     "\n",
     "\n",
     "# Take a long time\n",
-    "day17_1(data17, 1000000000000)\n"
+    "day17(data17, 2022), day17(data17, 1000000000000)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Day 18"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
